@@ -9,6 +9,8 @@ v4.10 ???
   - Added the /DocType/ argument, function, mapped type and variable
     annotation.
   - Added the /DocValue/ argument annotation.
+  - Added the %Docstring directive to specify explicit docstrings for classes,
+    functions and methods.
   - Added support for configuring and building outside of the source tree.
 
 v4.9.2 ??? November 2009
